# classification

./: .env  .gitignore  .pdm-python  Dockerfile  docker-compose.yml  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.ts
api/: index.py
api/models/: user.py
api/saved_models/: model_cpu.tflite
app/: card.tsx  globals.scss  layout.tsx  page.tsx  sider.tsx  spinner.tsx  template.tsx
app/image/: classification.tsx  page.tsx
app/text/: classificaiton.tsx  page.tsx
models/CIFAR-10/: augmentation.ipynb  simple with kfold.ipynb
models/LIAR/: bert_model.ipynb  clean_text.pkl  embedding_models.ipynb  test_save.ipynb  traditional_models.ipynb  vectorizer.joblib
models/cifar/: model_cpu.tflite
