[project]
name = "classification"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "hamid", email = "dev.hamidbasri@gmail.com"},
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
